--- a/StockDataSource/Views/Home/Index.cshtml
+++ b/StockDataSource/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <a href="/Home/StockGrid">Stock Grid</a>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        <p><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="StockGrid">StockGrid</a></p>
+        <a href="Home/StockDataRequest?symbol=MSFT&target=price">Stock Data Request</a>
+    </div>
